--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
     <img src="img/logo.svg" alt="">
   </div>
   <main>
-    
     <header>
       <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
-  
       </h1>
+      <div class="details">
+        Scritto da <span class="author"> The Booleaner</span> <br>
+        il 10/10/2020
+      </div>
     </header>
+    <div class="top_images">
+      <img src="img/tim-1.jpg" alt="Tim">
+      <img src="img/tim-2.jpg" alt="Tim">
+    </div>
+    <div class="didascalia">
+      1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
+      2nd Photo: Wikimedia, by Paul Clarke
+    </div>
+
   </main>
 </body>
 
