--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header>
       <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee
       </h1>
-      <div class="details">
+      <p class="details">
         Scritto da <span class="author"> The Booleaner</span> <br>
         il 10/10/2020
-      </div>
+      </p>
     </header>
     <div class="top_images">
       <img src="img/tim-1.jpg" alt="Tim">
@@ -28,8 +28,62 @@
       1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br>
       2nd Photo: Wikimedia, by Paul Clarke
     </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat nemo vel facere quos sequi soluta dolorum veniam enim quod illo, excepturi nam, voluptatem expedita. <mark>Deserunt, modi! Illo blanditiis assumenda architecto vitae,</mark> soluta quis tempora sit neque voluptatibus voluptatum rem voluptas quidem dignissimos? Quidem quos illo fugiat numquam, cumque minima quasi.</p>
 
+    <ul>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aperiam facilis in obcaecati perferendis rem.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aperiam facilis in obcaecati perferendis rem.
+      </li>
+      <li>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti aperiam facilis in obcaecati perferendis rem.
+      </li>
+      
+
+    </ul>
+
+    <table>
+      <tr>
+        <th>Lorem ipsum dolor</th>
+        <th>Lorem ipsum dolor</th>
+        <th>Lorem ipsum dolor</th>
+      </tr>
+      <tr>
+        <td><p>Lorem ipsum dolor</p></td>
+        <td><p>Lorem ipsum dolor</p></td>
+        <td><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum, optio?</p></td>
+      </tr>  
+      <tr>
+        <td><p>Lorem ipsum dolor</p></td>
+        <td><p>Lorem ipsum dolor</p></td>
+        <td><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, aspernatur!</p></td>
+      </tr>
+      <tr>
+        <td><p>Lorem ipsum dolor</p></td>
+        <td><p>Lorem ipsum dolor</p></td>
+        <td><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, velit!</p></td>
+      </tr>
+
+    </table>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam corporis perferendis, omnis illo nisi quibusdam quo molestias a dolore adipisci rem ullam laboriosam ab fuga porro eos vitae pariatur. <mark>Saepe quia mollitia nobis eius, ratione quod magni vero</mark> eaque eveniet expedita omnis, voluptas deserunt rem cumque perspiciatis quisquam, ex placeat.</p>
   </main>
+  <footer>
+    <h2 class="details">
+      Potrebbero interessarti
+    </h2>
+    <div class="ad">
+      <img src="img/monitor.jpg" alt="">
+      <div class="tl">Lorem Ipsum Dolor</div>
+    </div>
+    <div class="ad">
+      <img src="img/graph.jpg" alt="">
+      <div class="tl">Lorem Ipsum Dolor</div>
+    </div>
+    
+  </footer>
 </body>
 
 </html>
